--- a/src/vue-keyboard.scss
+++ b/src/vue-keyboard.scss
@@ -10,6 +10,7 @@
 		border: none;
 		outline: none;
 		padding: 8px 10px;
+		min-width: 40px;
 		margin: 0 2px;
 		background: #EEE;
 		color: #666;
